--- a/.env.sample
+++ b/.env.sample
@@ -1,22 +1,23 @@
-# Chain config
+# API Keys
 QUICKNODE_API_KEY = 'quick node key'
 INFURA_API_KEY = 'your infura api key'
 ETHSCAN_API_KEY =''
 ARBISCAN_API_KEY =''
-ARBITRUM_RPC_URL='htttps://your-arbitrum-rpc-url'
 ONE_INCH_TOKEN = 'Bearer YOUR_1INCH_TOKEN'
 
-UFARM_DEMO_URL = 'https://ufarm.digital'
+# Chain config
+ARBITRUM_RPC_URL='htttps://your-arbitrum-rpc-url'
+UFARM_DEMO_URL = 'https://ufarm.demo.digital'
 UFARM_DEMO_CHAIN_ID = 123456
 UFARM_DEV_URL = 'https://ufarm.dev.digital'
 UFARM_DEV_CHAIN_ID = 123456
 
-# Test config
-TEST_MNEMONIC = 'twelve words mnemonic from our "usefull links" wiki page or any another' # Deployer will be the first one from that passphrase
-DEPLOYMENTS_JSON = 'path to the deployments.json file to read in some scripts'
-ONE_INCH_TOKEN = 'Bearer your1inch-token'
+# Deployment config
+DEPLOYMENTS_VERSION = 'v1.0.0'
+DEPLOYMENTS_JSON = 'path to place the deployments.json'
+TEST_MNEMONIC = 'twelve words mnemonic to derive keys' # Deployer will be the first one from that passphrase
 
-# General config
+# Predefined addresses
 PANIC_MANAGER_ADDRESS=0xABCDEF1234567890ABCDEF1234567890ABCDEF12
 FUND_APPROVER_ADDRESS=0xABCDEF1234567890ABCDEF1234567890ABCDEF12
 UFARM_MANAGER_ADDRESS=0xABCDEF1234567890ABCDEF1234567890ABCDEF12
