--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,15 @@
 {
-  "useTabs": true,
-  "tabWidth": 2,
-  "semi": false,
-  "singleAttributePerLine": false,
-  "trailingComma": "all",
-  "singleQuote": true,
-  "printWidth": 100,
-  "bracketSameLine": true
+    "plugins": ["prettier-plugin-solidity"],
+    "overrides": [
+        {
+            "files": "*.sol",
+            "options": {
+                "printWidth": 120,
+                "tabWidth": 4,
+                "useTabs": false,
+                "singleQuote": false,
+                "bracketSpacing": false
+            }
+        }
+    ]
 }
